<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tb_bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/settings_subpage_padding">

        <include layout="@layout/include_settings_toolbar" />

        <TextView
            style="@style/SettingsHintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/settings_allowed_list_edit_hint" />

        <EditText
            android:id="@+id/inputAllowedModules"
            style="@style/SettingsEditText"
            android:hint="@string/settings_hint_allowed_modules"
            android:minLines="3" />

        <Button
            android:id="@+id/btnSaveAllowed"
            style="@style/SettingsPrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/settings_save" />
    </LinearLayout>
</ScrollView>
