<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tb_bg"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/settings_subpage_padding">

        <include layout="@layout/include_settings_toolbar" />

        <TextView
            style="@style/SettingsSectionLabel"
            android:text="@string/meeting_control_section"
            android:textColor="@color/tb_text_muted" />

        <LinearLayout
            android:id="@+id/groupMeetingControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card"
            android:orientation="vertical" />

        <TextView
            style="@style/SettingsSectionLabel"
            android:layout_marginTop="14dp"
            android:text="@string/meeting_audio_settings"
            android:textColor="@color/tb_text_muted" />

        <LinearLayout
            android:id="@+id/groupAudio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card"
            android:orientation="vertical" />

        <TextView
            style="@style/SettingsSectionLabel"
            android:layout_marginTop="14dp"
            android:text="@string/meeting_info_title"
            android:textColor="@color/tb_text_muted" />

        <LinearLayout
            android:id="@+id/groupInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card"
            android:orientation="vertical" />

        <TextView
            style="@style/SettingsSectionLabel"
            android:layout_marginTop="14dp"
            android:text="@string/meeting_participants_section"
            android:textColor="@color/tb_text_muted" />

        <LinearLayout
            android:id="@+id/groupParticipants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_card"
            android:orientation="vertical" />
    </LinearLayout>
</ScrollView>
